feat(record-creation): support new Authority record creation
Closes: MODQM-322

--- a/src/main/resources/swagger.api/records-editor.yaml
+++ b/src/main/resources/swagger.api/records-editor.yaml
@@ -57,6 +57,7 @@ paths:
     post:
       tags:
         - records-editor
+      operationId: createNewRecord
       responses:
         '201':
           description: MARC Record status created
