MODQM-405 Add allowed values for fields in marc specification. (#244)
feat(marc-specification): add allowed values for fields in marc specification

- Add allowed values for fields in marc specification
- Change "isArray" to false for "Proj" item for "maps" document type
 
Closes MODQM-405

--- a/src/main/resources/swagger.api/schemas/common.yaml
+++ b/src/main/resources/swagger.api/schemas/common.yaml
@@ -364,6 +364,19 @@ marcSpecificationCondition:
     - tag
     - positions
 
+marcSpecificationItemValue:
+  type: object
+  description: Specification item value definition
+  properties:
+    code:
+      description: Value code
+      type: string
+      example: e
+    name:
+      description: Value name
+      type: string
+      example: Detailed date
+
 marcSpecificationItem:
   type: object
   description: Specification item definition
@@ -396,6 +409,10 @@ marcSpecificationItem:
       description: Is item read only
       type: boolean
       example: true
+    allowedValues:
+      type: array
+      items:
+        $ref: '#/marcSpecificationItemValue'
   required:
     - code
     - name
