--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   postgres:
-    container_name: postgres-quick-marc
+    container_name: postgres_mod-quick-marc
     image: postgres:12-alpine
     ports:
       - "5432:5432"
@@ -17,7 +17,7 @@ services:
       - mod-quick-marc-local
 
   pgadmin:
-    container_name: pgadmin-quick-marc
+    container_name: pgadmin_mod-quick-marc
     image: dpage/pgadmin4:6.7
     ports:
       - ${PGADMIN_PORT}:80
@@ -31,7 +31,7 @@ services:
       - mod-quick-marc-local
 
   zookeeper:
-    container_name: zookeeper-quick-marc
+    container_name: zookeeper_mod-quick-marc
     image: wurstmeister/zookeeper:3.4.6
     ports:
       - "2181:2181"
@@ -39,7 +39,7 @@ services:
       - mod-quick-marc-local
 
   kafka:
-    container_name: kafka-quick-marc
+    container_name: kafka_mod-quick-marc
     image: wurstmeister/kafka:2.13-2.8.1
     ports:
       - "9092:9092"
@@ -60,7 +60,7 @@ services:
       - mod-quick-marc-local
 
   kafka-ui:
-    container_name: kafka-ui-quick-marc
+    container_name: kafka-ui_mod-quick-marc
     image: provectuslabs/kafka-ui:latest
     ports:
       - "8080:8080"
@@ -76,13 +76,13 @@ services:
       - mod-quick-marc-local
 
   mod-quick-marc:
-    container_name: mod-quick-marc
+    container_name: mod_mod-quick-marc
     image: dev.folio/mod-quick-marc
     build:
       context: ../
       dockerfile: Dockerfile
     ports:
-      - "9138:8081"
+      - "8081:8081"
       - "5005:5005"
     environment:
       ENV: ${ENV}
