--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <folio-spring-support.version>8.2.0-SNAPSHOT</folio-spring-support.version>
     <folio-service-tools.version>4.1.0-SNAPSHOT</folio-service-tools.version>
+    <mod-record-specifications-validator.version>1.0.0-SNAPSHOT</mod-record-specifications-validator.version>
     <marc4j.version>2.9.5</marc4j.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
@@ -53,11 +54,22 @@
       <artifactId>folio-spring-base</artifactId>
       <version>${folio-spring-support.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>folio-spring-i18n</artifactId>
+      <version>${folio-spring-support.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-service-tools-spring-dev</artifactId>
       <version>${folio-service-tools.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-record-specifications-validator</artifactId>
+      <version>${mod-record-specifications-validator.version}</version>
     </dependency>
 
     <dependency>
