--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -31,6 +31,7 @@ spring:
       - qm-update-results
       - data-import-results
       - linking-rules-results
+      - specifications
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
   cloud:
