--- a/src/main/resources/swagger.api/records-editor.yaml
+++ b/src/main/resources/swagger.api/records-editor.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: quickMARC Record Editor
-  version: 5.0
+  version: 5.5
 servers:
   - url: /records-editor/
 paths:
@@ -172,8 +172,8 @@ paths:
       tags:
         - records-validator
       responses:
-        '201':
-          description: MARC Record status created
+        '200':
+          description: MARC Record validation result
           content:
             application/json:
               schema:
