feat(validation): Consume specification change event
- Add kafka consumer
- Add byId method to Specifications client
- Update specification cache on SpecificationUpdatedEvent

Implements: MODQM-436

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -69,6 +69,10 @@ folio:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
         topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
         group-id: ${folio.environment}-mod-quick-marc-qm-group
+      specification-updated:
+        concurrency: ${KAFKA_EVENTS_CONCURRENCY:1}
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)specification-storage\.specification\.updated}
+        group-id: ${folio.environment}-mod-quick-marc-specification-group
 management:
   endpoints:
     web:
