--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-quick-marc</artifactId>
-  <version>6.0.0-SNAPSHOT</version>
+  <version>6.1.0-SNAPSHOT</version>
   <description>API for quickMARC - in-app editor for MARC records in SRS</description>
   <packaging>jar</packaging>
 
@@ -23,9 +23,9 @@
     <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
     <marc-specifications.yaml.file>${project.basedir}/src/main/resources/swagger.api/marc-specifications.yaml</marc-specifications.yaml.file>
 
-    <folio-spring-support.version>8.2.0</folio-spring-support.version>
-    <folio-service-tools.version>4.1.0</folio-service-tools.version>
-    <mod-record-specifications-validator.version>1.0.0-SNAPSHOT</mod-record-specifications-validator.version>
+    <folio-spring-support.version>8.3.0-SNAPSHOT</folio-spring-support.version>
+    <folio-service-tools.version>4.2.0-SNAPSHOT</folio-service-tools.version>
+    <mod-record-specifications-validator.version>1.1.0-SNAPSHOT</mod-record-specifications-validator.version>
     <marc4j.version>2.9.6</marc4j.version>
     <mapstruct.version>1.6.2</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
