fix(deps): fix enum name generation in openapi generator

--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,7 @@
                 <useSpringBoot3>true</useSpringBoot3>
                 <generatedConstructorWithRequiredArgs>false</generatedConstructorWithRequiredArgs>
               </configOptions>
+              <additionalProperties>removeEnumValuePrefix=true</additionalProperties>
             </configuration>
           </execution>
           <execution>
