--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: mod-quick-marc
+  threads:
+    virtual:
+      enabled: true
   datasource:
     password: ${DB_PASSWORD:pass}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
@@ -96,22 +99,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: info,health,env,httptrace,loggers
+        include: info,health,liquibase,threaddump,heapdump,loggers
       base-path: /admin
   endpoint:
     loggers:
-      enabled: true
-#  endpoint:
-#    health:
-#      show-details: always
-#      show-components: always
-###################################################
-# Disable all checks except for readiness
-###################################################
-  health:
-    defaults:
-      enabled: false
-    readinessstate:
-      enabled: true
+      access: unrestricted
 server:
   port: 8081
