--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,22 @@
 spring:
   application:
     name: mod-quick-marc
+  threads:
+    virtual:
+      enabled: true
   datasource:
-    password: ${DB_PASSWORD:pass}
+    hikari:
+      connectionTimeout: ${DB_CONNECTION_TIMEOUT:30000}
+      idleTimeout: ${DB_IDLE_TIMEOUT:600000}
+      keepaliveTime: ${DB_KEEPALIVE_TIME:0}
+      maxLifetime: ${DB_MAX_LIFETIME:1800000}
+      validationTimeout: ${DB_VALIDATION_TIMEOUT:5000}
+      maximumPoolSize: ${DB_MAXPOOLSIZE:10}
+      minimumIdle: ${DB_MINIMUM_IDLE:10}
+      initializationFailTimeout: ${DB_INITIALIZATION_FAIL_TIMEOUT:30000}
+      leakDetectionThreshold: ${DB_LEAK_DETECTION_THRESHOLD:60000}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
+    password: ${DB_PASSWORD:pass}
     username: ${DB_USERNAME:user}
   kafka:
     bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
@@ -96,22 +109,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: info,health,env,httptrace,loggers
+        include: info,health,liquibase,threaddump,heapdump,loggers
       base-path: /admin
   endpoint:
     loggers:
-      enabled: true
-#  endpoint:
-#    health:
-#      show-details: always
-#      show-components: always
-###################################################
-# Disable all checks except for readiness
-###################################################
-  health:
-    defaults:
-      enabled: false
-    readinessstate:
-      enabled: true
+      access: unrestricted
 server:
   port: 8081
