--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <folio-spring-support.version>9.0.0</folio-spring-support.version>
     <folio-service-tools.version>5.0.0</folio-service-tools.version>
-    <mod-record-specifications-validator.version>2.0.0-SNAPSHOT</mod-record-specifications-validator.version>
+    <mod-record-specifications-validator.version>2.0.0</mod-record-specifications-validator.version>
     <marc4j.version>2.9.6</marc4j.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
