feat: add “allowedValues” for MARC Authority 008 field specification
- Upgrade Docker configurations: PostgreSQL version to 16, Kafka setup to KRaft mode
- Enhance docker-compose optimization: remove unused services, streamline configurations
- Update database credentials and app configurations

Closes: MODQM-455

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: mod-quick-marc
   datasource:
-    password: ${DB_PASSWORD:pass}
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
-    username: ${DB_USERNAME:user}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:modules}
+    password: ${DB_PASSWORD:folio_admin}
+    username: ${DB_USERNAME:folio_admin}
     hikari:
       register-mbeans: true
   kafka:
