--- a/docker/.env
+++ b/docker/.env
@@ -1,7 +1,7 @@
 COMPOSE_PROJECT_NAME=folio-mod-quick-marc
 DB_HOST=postgres
 DB_PORT=5432
-DB_DATABASE=okapi_modules
+DB_DATABASE=modules
 DB_USERNAME=folio_admin
 DB_PASSWORD=folio_admin
 PGADMIN_DEFAULT_EMAIL=user@domain.com
