--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,9 +15,9 @@ spring:
       minimumIdle: ${DB_MINIMUM_IDLE:10}
       initializationFailTimeout: ${DB_INITIALIZATION_FAIL_TIMEOUT:30000}
       leakDetectionThreshold: ${DB_LEAK_DETECTION_THRESHOLD:60000}
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
-    password: ${DB_PASSWORD:pass}
-    username: ${DB_USERNAME:user}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:modules}
+    username: ${DB_USERNAME:folio_admin}
+    password: ${DB_PASSWORD:folio_admin}
   kafka:
     bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
     consumer:
